--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@1,900&display=swap');
 
 body {
     margin: 0;
